# HyprDownloader

./: Cargo.toml  README.md
src/: main.rs
src/app/: mod.rs  ui_builder.rs  utils.rs
src/downloader/: download.rs  formats.rs  mod.rs
src/ui/: components.rs  mod.rs  style.rs
