[package]
name = "media_downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.7.3"
gio = "0.17"
glib = "0.17"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.79"
once_cell = "1.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
dirs = "5.0.1"
rand = "0.8.5"
